profil work semua

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -116,6 +116,12 @@ hr {
   margin-bottom: 20px;
   box-shadow: -2px 3px 6px 0px;
 }
+.hiddenForm{
+  display: none;
+}
+.hiddenForm input{
+  display: none;
+}
 .data {
   background-color: rgb(239, 243,228 );
   padding: 10px;
