--- a/public/css/master.css
+++ b/public/css/master.css
@@ -7,8 +7,27 @@ nav {
   background-color: rgb(89,186,208);
   color: white;
 }
+@media (max-width: 425px) {
+  .brand {
+    margin-left: 30% !important;
+  }
+}
+@media (min-width: 768px) {
+  .navHeader {
+    margin-left: 39% !important;
+  }
+}
+@media (max-width: 320px) {
+  .brand {
+    margin-left: 30%;
+  }
+
+}
+
+
 body {
-  margin-top: 70px;
+  margin-top: 107px;
+
   background-color: rgb(245,245,245);
 }
 /* end master */
@@ -48,7 +67,6 @@ hr {
   background-color: rgb(224,224,224);
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-top: 50px;
 }
 .update a {
   width: 100%;
